--- a/assets/sass/job.scss
+++ b/assets/sass/job.scss
@@ -94,12 +94,8 @@ form.jobs-search > div.flex {
     }
   }
 
-  .form-control, input[type='submit'] {
+  .form-control-hr, input[type='submit'] {
     flex: 1;
-  }
-
-  .form-control {
-    margin-top: 0;
   }
 }
 
