--- a/views/home/_welcome_other.pug
+++ b/views/home/_welcome_other.pug
@@ -16,4 +16,4 @@
         br
         | 我们希望大学生能够在好好享受大学生活的同时，好好利用人生中这宝贵的四年，能够学有所成。如果你没地方锻炼，我们愿意提供机会
       .company-goto
-        a(href='/jobs/new' class='btn-primary') 发布职位及其问题
+        a(href='/jobs/new' class='btn-primary') 发布职位
