--- a/views/user/_signup_step1.pug
+++ b/views/user/_signup_step1.pug
@@ -8,6 +8,7 @@ form(method='post', action='/signup_step1', class='signup', id='signup-step1', d
   .form-group
     label(for='password' class='label-input') 密码：
     input(type='password', name='password', id='password', class='form-control', required)
+  label(class='label-input') 身份：
   .form-group
     input(type='radio', id='user-type-student', name='userType', value=0, checked)
     label.form-control(for='user-type-student') 学生
