--- a/assets/sass/user.scss
+++ b/assets/sass/user.scss
@@ -46,6 +46,7 @@
   }
 }
 
+// 注册
 .formal-signup {
   .progress {
     border: 1px solid #aaa;
@@ -88,5 +89,20 @@
     border: 1px solid #aaa;
     flex: 1;
     margin-left: 30px;
+  }
+}
+
+// 密码重置
+.password-reset {
+  width: 40%;
+  p.reset-hint {
+    color: #777;
+    margin-bottom: 1em;
+  }
+  input[type='submit'] {
+    width: 100%;
+  }
+  .form-group {
+    text-align:left;
   }
 }
