--- a/views/home/_welcome_signup.pug
+++ b/views/home/_welcome_signup.pug
@@ -6,20 +6,19 @@
     form(method='post', action='/signup' class='index-signup')
       .form-group
         input(type='hidden', name='step', value='1')
-        label(for='name' class='label label-input') 用户名：
+        label(for='name' class='label-input') 用户名：
         input(type='text', name='name', id='name', class='form-control', required, autofocus)
       .form-group
-        label(for='email' class='label label-input') Email：
+        label(for='email' class='label-input') Email：
         input(type='email', name='email', id='email', class='form-control' required)
       .form-group
-        label(for='password' class='label label-input') 密码：
+        label(for='password' class='label-input') 密码：
         input(type='password', name='password', id='password', class='form-control' required)
+      label(class='label-input') 身份：
       .form-group
-        label(class='label label-radio')
-          input(type='radio', id='user-type-student', name='userType', value=0, checked)
-          | 学生
-        label(class='label label-radio')
-          input(type='radio', id='user-type-company', name='userType', value=1)
-          | 公司
-      div
+        input(type='radio', id='user-type-student', name='userType', value=0, checked)
+        label.form-control(for='user-type-student') 学生
+        input(type='radio', id='user-type-company', name='userType', value=1)
+        label.form-control(for='user-type-company') 公司
+      .form-group
         input(type='submit', value='加入学做网' class='btn-primary like-fm-ctl')
