--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -1,6 +1,6 @@
 extends ../layouts/index
 append css
-  link(href=assetHashPath("css/index.css"), rel="stylesheet")
+  link(href=assetHashPath("css/home.css"), rel="stylesheet")
 append js
   script(src=assetHashPath('js/home.js'))
 block content
