--- a/views/layouts/_head.pug
+++ b/views/layouts/_head.pug
@@ -1,26 +1,29 @@
 header
   .content.header-container.flex
     a.large-font.text-bold(href='/' class='logo') 学做网
-    - var cu = currentUser
-    if cu
-      a.msg-notify(href='/profile/message')
-        span(class='fa fa-bell vertical-middle')
-        span.msg-tip.small-font.round-border 你有未读消息
-      span.user-center
-        a.profile-index(href='/profile')
-          img.round-border.vertical-middle(src=cu.avatar)
-          span.vertical-middle(class='fa fa-caret-down menu-show')
-        ul.profile-dropdown.nav.small-font.round-border
-          li.text-center #{cu.name}, 你好
-          li.text-center
-            a(href='/profile/user_info') 基本信息
-          li.text-center
-            a(href='/profile/jobs') 职位信息
-          li.text-center
-            a(href='/profile/account') 账号与密码
-          li.text-center
-            a(href='/logout') 退出
-    else
-      span.logsig
-        a(href='/login' class='btn-primary login') 登陆
-        a(href='/signup' class='btn-normal signup') 注册
+    a(href='/questions') 去解决问题
+    a(href='/jobs') 看实习岗位
+    a(href='/jobs/new') 发布职位
+    span.right-btns
+      - var cu = currentUser
+      if cu
+        a.msg-notify(href='/profile/message')
+          span(class='fa fa-bell vertical-middle')
+          span.msg-tip.small-font.round-border 你有未读消息
+        span.user-center
+          a.profile-index(href='/profile')
+            img.round-border.vertical-middle(src=cu.avatar)
+            span.vertical-middle(class='fa fa-caret-down menu-show')
+          ul.profile-dropdown.nav.small-font.round-border
+            li.text-center #{cu.name}, 你好
+            li.text-center
+              a(href='/profile/user_info') 基本信息
+            li.text-center
+              a(href='/profile/jobs') 职位信息
+            li.text-center
+              a(href='/profile/account') 账号与密码
+            li.text-center
+              a(href='/logout') 退出
+      else
+        a(href='/login' class='btn-normal login fir-span') 登陆
+        a(href='/signup' class='btn-primary signup') 注册
