--- a/views/home/_welcome_other.pug
+++ b/views/home/_welcome_other.pug
@@ -7,8 +7,8 @@
         br
         | 也许你应该和企业提前互动一下，认真解决一些问题，重试学习的热情，并获得实习的机会，马上：
       .student-goto
-        a(href='/questions' class='btn-primary goto-questions') 去解决问题
-        a(href='/jobs' class='btn-primary') 看实习岗位
+        a(href='/questions' class='btn-primary goto-questions') 解决问题
+        a(href='/jobs' class='btn-primary') 实习岗位
     .welcome-company.flex
       h3 作为一个公司：
       .sentence
