--- a/views/layouts/_head.pug
+++ b/views/layouts/_head.pug
@@ -2,8 +2,9 @@ header
   .content.header-container.flex
     a.large-font.text-bold(href='/' class='logo') 学做网
     a(href='/questions') 解决问题
-    a(href='/jobs') 实习岗位
-    a(href='/jobs/new') 发布职位
+    a(href='/jobs') 找实习岗位
+    span.division
+    a(href='/jobs/new') 发布实习岗位
     span.right-btns
       - var cu = currentUser
       if cu
