--- a/views/layouts/_head.pug
+++ b/views/layouts/_head.pug
@@ -4,6 +4,9 @@ header
     a(href='/questions') 解决问题
     a(href='/jobs') 找实习岗位
     span.division
+    a(href='/seniors/say') 师兄姐说
+    a(href='/seniors/ask') 问师兄姐
+    span.division
     a(href='/jobs/new') 发布实习岗位
     span.right-btns
       - var cu = currentUser
