--- a/views/answers/index.pug
+++ b/views/answers/index.pug
@@ -23,12 +23,12 @@ block content
             .a-content.small-font!= answer.content
             .a-foot
               if answer.isScored
-                span.success-result 你对此解答的当前评分：#{answer.score} 分
+                span.fir-span.success-result 你对此解答的当前评分：#{answer.score} 分
                 button.btn-normal.a-re-score 重新评分
               else
                 button.btn-primary.a-to-score 为此解答评分
   .overlay(style={display: 'none'})
-  form.overlay-content.set-score(style={display: 'none'} method='post')
+  .overlay-content.set-score(style={display: 'none'})
     .form-group
       label.label.label-input(for='score') 分数：
       input(type='text', name='score' id='score' placeholder='0 ~ 100' class='form-control')
@@ -37,5 +37,5 @@ block content
       label.label.label-input(for='comment') 评语：
       textarea(name='comment', id='comment', class='form-control')
     .form-group
-      input.fir-span.btn-primary(type='submit' value='提 交')
-      input.cancel.btn-normal(type='button' value='取消')
+      input.ol-ok.fir-span.btn-primary(type='button' value='提 交')
+      input.ol-cancel.btn-normal(type='button' value='取消')
