--- a/assets/sass/answers.scss
+++ b/assets/sass/answers.scss
@@ -1,35 +1,12 @@
 @import 'partials/all';
+@import 'partials/question';
+@import 'partials/answer';
 
 @mixin job-title {
   padding-bottom: 0.5em;
-  border-bottom: 3px solid $bd-dark;
+  border-bottom: 2px solid $hl-color;
 }
 
-.as-q {
-  margin: 1em 0;
-  border: 1px solid $bd-light;
-  border-radius: 4px 4px 0 0;
-  border-bottom: none;
-}
-
-.as-q-title, .as-q-content, .as-q-foot {
-  border-bottom: 1px solid $bd-light;
-  padding: 0.5rem;
-}
-
-.as-q-foot > span {
-  padding: 0 0.5em;
-  border-right: 2px solid $bd-normal;
-
-  &:first-child {
-    padding-left: 0;
-  }
-
-  &:last-child {
-    padding-right: 0;
-    border-right: none;
-  }
-}
 
 /* new answer */
 .answer-new .a-title {
@@ -61,40 +38,10 @@
   margin-top: 0.5em;
 }
 
-.answer {
-  border: 1px solid $bd-dark;
-  border-radius: 4px 4px 0 0;
-  border-bottom: none;
-  margin: 1em 0;
-}
-
-.a-title, .a-content, .a-foot {
-  padding: 0.5rem;
-  border-bottom: 1px solid $bd-dark;
-}
-
 .a-user-info > span {
   margin-right: 0.5em; 
   &:last-child {
     margin-right: 0; 
-  }
-}
-
-.a-edit-opt {
-  margin-left: auto;
-}
-
-.a-title > span {
-  padding: 0 0.5em;
-  border-right: 2px solid $bd-dark;
-
-  &:first-child {
-    padding-left: 0;
-  }
-
-  &:last-child {
-    padding-right: 0;
-    border-right: none;
   }
 }
 
