--- a/assets/sass/job.scss
+++ b/assets/sass/job.scss
@@ -150,7 +150,7 @@ form.jobs-search > div.flex {
 .appliers-container {
   .applier-title {
     padding-bottom: 0.5em;
-    border-bottom: 2px solid $bd-dark;
+    border-bottom: 2px solid $hl-color;
     margin-bottom: 0.5em;
   }
 
