--- a/views/questions/index.pug
+++ b/views/questions/index.pug
@@ -1,4 +1,6 @@
 extends _layout.pug
+append js
+  script(src=assetHashPath('js/question/index.js'))
 block content
   .q-index
     .q-common-head.flex.large-font
