--- a/views/questions/_list_question.pug
+++ b/views/questions/_list_question.pug
@@ -21,7 +21,7 @@
         button.fir-span.btn-warning.del-question(data-link='/question/' + question.id + '/remove') 删 除
         .overlay(style={display: 'none'})
         .overlay-content(style={display: 'none'})
-          .ol-main 删除后无法恢复，确定要删除你的解答吗？
+          .ol-main 删除后无法恢复，确定要删除这个问题吗？
           .ol-foot
             button.fir-span.btn-warning.ol-ok 确定
             button.btn-normal.ol-cancel 取消
