--- a/views/user/_signup_step3.pug
+++ b/views/user/_signup_step3.pug
@@ -1,5 +1,4 @@
-p.text-center
-  | 注册完成，马上去：
+p.signup-over.text-center.success-result.text-bold 注册完成！马上去：
   if userType == 0
     a(href='/jobs') 找寻实习岗位
   else
