--- a/views/user/signupView.pug
+++ b/views/user/signupView.pug
@@ -3,9 +3,8 @@ append js
   script(src='/ckeditor/ckeditor.js')
 block content
   .formal-signup
-    h3 加入学做网
-    p 更快找到实习岗位，更好学习专业知识
-    .progress.flex
+    .larger-font 加入学做网， 更快找到实习岗位，更好学习专业知识， 快速锁定优秀毕业生：
+    .progress.flex.round-border
       div.text-center(class={'signup-active': step == 1}) 创建账号
       div.text-center(class={'signup-active': step == 2}) 完善基本资料
       div.text-center(class={'signup-active': step == 3}) 注册完毕
