--- a/views/user/_signup_step2.pug
+++ b/views/user/_signup_step2.pug
@@ -1,7 +1,7 @@
-form(method='post', action='/signup_step2', class='signup', id='signup-step2', data-step=step)
+form(method='post', action='/signup_step2', class='signup round-border', id='signup-step2', data-step=step)
   if userType == 0
     include _student_signup_detail.pug
   else
     include _company_signup_detail.pug
   .form-group
-    input(type='submit', value='保 存' class='btn btn-primary')
+    input(type='submit', value='保 存' class='btn-primary')
