--- a/assets/sass/partials/_form.scss
+++ b/assets/sass/partials/_form.scss
@@ -80,6 +80,6 @@ textarea.rich-editor + div {
 
 .form-control-hint {
   color: $less-imp;
-  font-size: 0.75em;
-  margin-top:6px;
+  font-size: 0.8em;
+  margin-top: 0.5em;
 }
