--- a/views/home/_welcome_signup.pug
+++ b/views/home/_welcome_signup.pug
@@ -2,7 +2,8 @@
   .welcome-signup.content.flex
     .main-slogan.larger-font
       h2.title 有效的学习和实习方式？
-      .sub-title 通过古老的问答方式，在企业和学生之间建立能力评估模型，这是学生进入企业实习的新途径
+      .sub-title 通过问答，在企业和学生之间建立能力评估模型
+      .sub-title 不做象牙塔里的学霸，解决问题才是王道
     form(method='post', action='/signup_step1' class='index-signup')
       .form-group
         input(type='hidden', name='step', value='1')
