--- a/views/user/_signup_step1.pug
+++ b/views/user/_signup_step1.pug
@@ -25,10 +25,10 @@ form(method='post', action='/signup_step1', class='signup round-border', id='sig
   h2 在这里，你将：
   p
     strong 更快找到实习机会：
-    | 不同于一般的招聘平台，这里的职位是企业专门为实习生准备的，更注重学生的基本素质及个人潜力；你可以直接根据个人专业和兴趣寻找合适的实习岗位
+    | 这里的职位是专门为理工科实习生准备的，更注重学生的基本素质及个人潜力，你可以直接根据个人专业和兴趣寻找合适的实习岗位
   p
     strong 更好学习专业知识：
-    | 每个实习岗位都有明确的深入的在线测试，如果你热爱你的专业，通过测试你能知道自己哪些地方有欠缺，哪些地方需要提高；如果你喜欢这个岗位但是专业不对口，通过测试你能知道学习方向，发现不足，从而为未来赢得这类岗位打下坚实基础，毕竟，我们还年轻
+    | 每个实习岗位都有深入的在线测试，通过测试你能知道自己哪些地方有欠缺，哪些地方需要提高，从而为未来赢得这类岗位打下坚实基础
   p
     strong 快速锁定优秀毕业生：
     | 作为企业，你可以根据职位要求及公司对人才的期望提前发布测试问题，通过对学生答题的考察，加上进一步的面试，可以高效准确地判断学生各方面的素质，从而快速锁定优秀毕业生
