--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -52,7 +52,9 @@
 
   ul.wl-content {
     margin: 0.5em 0;
+    padding-left: 1.125em;
     flex: 1;
+
     li {
       margin: 0.5em 0;
       font-weight: bold;
