--- a/assets/sass/job.scss
+++ b/assets/sass/job.scss
@@ -103,16 +103,11 @@ form.jobs-search > div.flex {
 .jobs-container {
   margin-top:1em;
 
-  .no-jobs {
-    color:$error-color;
-    text-align:center;
-  }
-
   .job-item {
     margin-bottom:1em;
     padding:10px;
-    background-color:$bd-light;
-    border:1px solid $bd-light;
+    background-color:#eee;
+    border:1px solid #d2d2d2;
   }
 }
 
