--- a/views/jobs/index.pug
+++ b/views/jobs/index.pug
@@ -12,31 +12,17 @@ block content
           option(value='' selected) 请选择
           each b in businesses
             option(value=b selected=b == business)= b 
-
-      span.flex
-        label(for='type' class='label') 类别：
-        select(name='type', id='type' class='form-control-hr')
-          option(value='' selected) 请选择
-          each t in types
-            option(value=t selected=t == type)= t 
     div.flex
       span.flex
         label(for='address' class='label') 工作地点：
         input(type='text', name='address', id='address', value=address, class='form-control-hr')
 
       span.flex
-        label(for='salary' class='label') 薪资：
-        select(name='salary', id='salary' class='form-control-hr')
-          option(value='' selected) 请选择
-          each s, i in salaries
-            option(value=i selected=!isNaN(parseInt(salary)) && i == salary)= s 
-
-      span.flex
-        input(type='submit', value='搜索', class='btn-primary')
+        input(type='submit', value='搜索', class='btn-normal')
 
   .jobs-container
     if !jobs.length
-      .no-jobs 对不起，没有符合条件的职位，请换个搜索条件吧
+      .text-center.error-result 对不起，没有符合条件的职位，请换个搜索条件吧
     else
       each job in jobs
         .job-item(data-job-id=job.id)
@@ -48,6 +34,5 @@ block content
             span 公司：
               a(href='/user/' + job._creator.id)= job._creator.name
             span 工作地点：<strong>#{job.address}</strong>
-            span 薪资：<strong>#{job.displaySalary}</strong>
     if pages > 1
       include ../share/_pager.pug
