--- a/assets/sass/partials/_base.scss
+++ b/assets/sass/partials/_base.scss
@@ -10,45 +10,10 @@ body {
   min-height:100vh;
 }
 
-main {
-  flex:1;
-  margin-top:1em;
-  margin-bottom:1em;
-}
-
-.content {
-  width:  960px;
-  margin: auto;
-}
-
 p {
   line-height: 1.2;
   margin-top: 0;
 }
-
-.flex         { display: flex; }
-.fl-align-cen { align-items: center}
-.inline-block { display: inline-block; }
-.relative     { position: relative; }
-.absolute     { position: absolute; }
-.round-border { border-radius: 4px; }
-
-/* horizontal center */
-.hcenter {
-  margin-left:  auto;
-  margin-right: auto;
-  display:      block;
-}
-
-/* text */
-.text-center      { text-align: center; }
-.text-bold        { font-weight: bold; }
-.large-font       { font-size: 1.4rem; }
-.larger-font      { font-size: 1.2rem; }
-.normal-font      { font-size: 1rem; }
-.small-font       { font-size: 0.9rem; }
-.smaller-font     { font-size: 0.8rem; }
-.vertical-middle  { vertical-align: middle; }
 
 /* link */
 a {
@@ -56,27 +21,7 @@ a {
   text-decoration:  none;
   cursor:           pointer;
 
-  &.hover-ul:hover { text-decoration: underline; }
-}
-
-/* list */
-ul.nav {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-/* flash */
-.flash-success {
-  padding: 0.5em 0;
-  color: $success-color;
-  margin-bottom: 0.5em;
-}
-
-.flash-error {
-  padding: 0.5em 0;
-  color: $error-color;
-  margin-bottom: 0.5em;
+  &:hover { text-decoration: underline; }
 }
 
 // button & input & select
@@ -90,28 +35,6 @@ ul.nav {
   border-radius: 4px;
   outline:none;
   border-color: $bd-light;
-}
-
-// 2个紧挨在一起的行内元素，第一个元素右边留空
-.fir-span {
-  margin-right: 0.5em;
-}
-
-// color change
-.success-result {
-  color: $success-color;
-}
-
-.error-result {
-  color: $error-color;
-}
-
-.less-imp {
-  color: $less-imp;
-}
-
-.unknown-result {
-  color: $unknown-color;
 }
 
 // 悬浮框
