--- a/views/layouts/_foot.pug
+++ b/views/layouts/_foot.pug
@@ -1,5 +1,4 @@
-footer
-  .content
-    a(href='http://www.miitbeian.gov.cn/') 蜀ICP备16034651号
-    | |
-    a(href='/about') 关于我们
+.c-footer.u-content
+  a.c-footer__a(href='http://www.miitbeian.gov.cn/') 蜀ICP备16034651号
+  | |
+  a.c-footer__a(href='/about') 关于我们
